--- a/styles/beef.css
+++ b/styles/beef.css
@@ -3,6 +3,20 @@ body {
     color: white;
     margin: 0 16em auto;
 }
+.nav {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+}
+nav, ul, .list {
+    display: inline-block;
+    padding: 0 0.6em 0.2em 0;
+    margin-top: 0.7;
+    list-style-type: none;
+}
+.list:hover {
+    border-bottom: 2px solid green;
+}
 a {
     color: white;
     text-decoration: none;
