--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@ body {
     background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     margin: 0;
     padding: 0;
 }
@@ -10,8 +11,22 @@ body {
     flex-flow: row;
     justify-content: center;
 }
+.welcome {
+    display: block;
+    /* border: 1px solid green; */
+    margin-top: 2rem;
+    margin-left: 2.5em;
+}
+h1 {
+    display: block;
+    border-bottom: 2px solid green;
+    padding-bottom: 0.4rem;
+    width: 27rem;
+    margin-bottom: 2rem;
+}
 nav, ul, li {
     display: inline-block;
+    font-weight: bold;
     padding: 0 0.6em 0.2em 0;
     margin-top: 0.7;
     list-style-type: none;
@@ -39,4 +54,23 @@ h1 {
 img {
     display: block;
     border-radius: 10px;
+}
+a{
+    text-decoration: none;
+    text-align: center;
+    color: white;
+}
+button {
+    display: block;
+    border-radius: 0.7rem;
+    text-align: center;
+    align-content: center;
+    border: none;
+    font-weight: bold;
+    padding: 0.5rem 0.3rem 0.5rem 0.3rem;
+}
+button:hover {
+    background-color: green;
+    color: whitesmoke;
+    font-weight: bold;
 }
